# PythonSamlSample

./: README.md  api-server.py  fake-front.py  fake-idp.py  pyproject.toml
public/: index.html
saml/: advanced_settings.json  settings.json
