[project]
name = "saml-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.32",
    "python3-saml>=1.16.0",
    "signxml>=5.0.1",
    "uvicorn>=0.49.0",
]
